# AgenticEngineering

./: .gitignore  .gitmodules  CLAUDE.md  PLAN.md  README.md  UAT-TESTING.md  agenticengineering.code-workspace  agents.md  blog.md  build-flutter-self-review.yml  build-python-self-review.yml  cloudbuild.yaml  deploy-worktree-self-review.yml  docker-compose.uat.yml  myagents.code-workspace  orchestration-build-self-review.yml  planner-build-self-review.yml  planner-cleaning-self-review.yml  planner-guidance-testing-self-review.yml  pyproject.toml  run_claude_exit.py  test-user-simulator-self-review.yml  test_args.sh
modules/AgenticCLI/: .testmondata-shm  .testmondata-wal  Makefile  README.md  TYPER_MIGRATION_SUMMARY.md  pyproject.toml
modules/AgenticCLI/.claude/: ralph-loop.local.md
modules/AgenticCLI/.github/workflows/: test.yml
modules/AgenticCLI/docs/: user_stories.yml
modules/AgenticCLI/docs/guides/: plan-creation.md
modules/AgenticCLI/src/agentic/: main.py
modules/AgenticCLI/src/agenticcli/: __init__.py  cli.py  cli_typer.py  console.py  context.py  decorators.py  entry.py  exceptions.py  logging.py  typer_app.py  validation.py
modules/AgenticCLI/test-results/: results.xml
modules/AgenticCLI/tests/: README.md  __init__.py  conftest.py  test_agent_help.py  test_cicd.py  test_cli.py  test_cli_restructure.py  test_cli_task.py  test_completion.py  test_config.py  test_console.py  test_context_commands.py  test_decorators.py  test_entry.py  test_entrypoint_commands.py  test_entrypoint_integration.py  test_environment.py  test_epic_from_plan.py  test_epic_list_folder_free.py  test_epic_list_truncation.py  test_epic_lock.py  test_epic_nested_tasks.py  test_epic_new.py  test_epic_new_uat.py  test_epic_phase.py  test_exceptions.py  test_execution_resilience.py  test_fix_005_006.py  test_health.py  test_inputs.py  test_interactive_answer.py  test_langsmith_commands.py  test_logging.py  test_loop_integration.py  test_loop_stop_idempotency.py  test_manifest.py  test_model_routing_wiring.py  test_naming.py  test_ntfy.py  test_ntfy_question_agent.py  (+76 more)
modules/AgenticCLI/tests/commands/: test_epic_deps.py  test_epic_seed.py  test_phase_display.py  test_workspace_sync.py
modules/AgenticCLI/tests/experiments/: __init__.py  experiment_results_template.yml  test_blind_baseline.py  test_blind_treatment.py
modules/AgenticCLI/tests/integration/: __init__.py  conftest.py  test_auto_archive_trigger.py  test_bootstrap_planner_workflow.py  test_context_bootstrap_planner.py  test_epic_path_arguments.py  test_event_bus_e2e.py  test_orchestrate_integration.py  test_orchestrate_smoke.py  test_orchestration_pass_hash.py  test_orchestration_sync.py  test_plan_creation_flow.py  test_plan_path_arguments.py  test_planner_loop_e2e.py  test_question_commands.py  test_question_tmux.py  test_sdk_tmux_sequential.py  test_session_uat.py  test_stop_idempotency_e2e.py  test_task_commands.py  test_tmux_layout_real.py  test_tmux_spawn.py  test_user_stories.py  test_workflow_sequences.py
modules/AgenticCLI/tests/uat/: test_epic_priority_deps_uat.py  test_event_bus_uat.py  test_orchestration_deps_uat.py
modules/AgenticCLI/tests/utils/: test_formatting.py  test_sdk_pane_runner.py  test_sdk_pane_runner_finalization.py  test_sdk_runner.py  test_spawn_command.py  test_subprocess_utils.py
modules/AgenticFrontend/: README.md  pyproject.toml
modules/AgenticFrontend/src/agenticfrontend/: __init__.py  server.py
modules/AgenticGuidance/: Makefile  README.md  pyproject.toml
modules/AgenticGuidance/agents/: README.md  manifest.yml
modules/AgenticGuidance/agents/_fixtures/: README.md
modules/AgenticGuidance/agents/_mock/: README.md
modules/AgenticGuidance/agents/deploy/: manifest.yml
modules/AgenticGuidance/agents/orchestration/: manifest.yml
modules/AgenticGuidance/agents/planner/: manifest.yml
modules/AgenticGuidance/agents/teacher/: manifest.yml
modules/AgenticGuidance/agents/test/: manifest.yml
modules/AgenticGuidance/assets/definitions/: acceptable-skips.yml  agent-categories.yml  agent-context-files.yml  agent-loops.yml  architecture-pattern.yml  build-artifacts.yml  build-packaging.yml  cleaner-shared-guidelines.yml  cli-agent-architecture.yml  cli-commands.yml  component-verification.yml  context-minimisation.yml  domains.yml  entrypoints.yml  (+46 more)
modules/AgenticGuidance/config/: gcp-artifact-registry.yml
modules/AgenticGuidance/docs/: ARCHITECTURE.md  agent-role-scope-matrix.md
modules/AgenticGuidance/entrypoints/: _analyze_friction.yml  _epic_build.yml  _epic_teach.yml  _orchestrate.yml  _plan.yml  _plan_build.yml  _plan_teach.yml
modules/AgenticGuidance/tests/: SMOKE_TEST_story_generation.md  UAT_VALIDATION_story_generation.md  __init__.py  conftest.py  orchestration-test-scenarios.yml  test_atomic_storage.py  test_config_ntfy.py  test_deploy_worktree_guidance.py  test_e2e_tinydb_native.py  test_filelock.py  test_filelock_crash_recovery.py  test_global_watch.py  test_integration_planning_with_stories.py  test_integration_question_workflow.py  test_integration_ralph_loop.py  test_integration_uat_story_validation.py  test_markers.py  test_models_question.py  test_orchestration_story_validation.py  test_pattern_watch_files.py  test_pattern_watch_staleness.py  test_phase_max_turns.py  test_plan_repository_filelock.py  test_plan_resurrection.py  test_planner_build_story_generation.py  test_planner_design_agent.py  test_planner_test_story_validation.py  test_services_claude_session.py  test_services_config.py  test_services_context.py  test_services_plan.py  test_services_plan_service.py  test_services_plan_service_integration.py  test_services_question.py  test_services_ralph.py  test_services_session.py  test_services_session_config.py  test_services_state.py  test_services_task.py  test_squash_merge_recovery.py  (+10 more)
modules/AgenticLangSmith/: README.md  analyze_cli_sessions.py  cli_session_analysis.json  pyproject.toml
modules/AgenticLangSmith/tests/: __init__.py  conftest.py  test_filters.py  test_friction.py  test_service.py
modules/AgenticTmux/: README.md  pyproject.toml
(+2432 files in other folders)
