[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-remote"
version = "0.1.0"
description = "Remote terminal access for AI coding agents (Claude Code)"
authors = []
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pynacl>=1.5.0",
    "ptyprocess>=0.7.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-remote = "agent_remote.cli:main"
agent-remote-terminal = "agent_remote.services.terminal.entrypoints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_remote*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml"]

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["F401", "I001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["agent_remote"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
    "test_vectors: marks tests as test vector validation tests",
    "docker: marks tests requiring Docker environment (network disconnect tests)",
    "manual: marks tests that require manual execution",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "docker>=7.0.0",
]
