[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticcli"
version = "0.1.0"
description = "Command-line interface for AgenticEngineering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AgenticEngineering" }
]
keywords = ["cli", "agentic", "planning", "worktree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "psutil>=5.9",
    "jinja2>=3.1",
    "typer[all]>=0.9.0",
    "watchdog>=3.0",
    "agenticlangsmith",
    "agenticguidance",
]

[project.scripts]
agentic = "agenticcli.entry:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-testmon>=2.0",
    "ruff>=0.1.0",
]
# Note: For langsmith commands, install agenticlangsmith locally:
#   pip install -e ../AgenticLangSmith

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-testmon>=2.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agenticcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-m 'not uat' --testmon"
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, require setup)",
    "experiment: marks tests as experimental (may be skipped)",
    "slow: marks tests as slow running",
    "uat: marks tests as UAT acceptance tests (on-demand, excluded from regular feedback loop)",
    "ntfy: marks tests that exercise ntfy notification paths (require mock HTTP)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.uv.sources]
agenticlangsmith = { path = "../AgenticLangSmith", editable = true }
agenticguidance = { path = "../AgenticGuidance", editable = true }
