[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticcli"
version = "0.1.0"
description = "Command-line interface for AgenticEngineering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AgenticEngineering" }
]
keywords = ["cli", "agentic", "planning", "epic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "psutil>=5.9",
    "jinja2>=3.1",
    "typer[all]>=0.9.0",
    "watchdog>=3.0",
    "claude-agent-sdk>=0.1.40",
    "agenticguidance",
]

[project.scripts]
agentic = "agenticcli.entry:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-testmon>=2.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
]
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-testmon>=2.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agenticcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-m 'not uat' -n auto --dist loadgroup"
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, require setup)",
    "experiment: marks tests as experimental (may be skipped)",
    "slow: marks tests as slow running",
    "uat: marks tests as UAT acceptance tests (on-demand, excluded from regular feedback loop)",
    "ntfy: marks tests that exercise ntfy notification paths (require mock HTTP)",
    "story: marks tests that validate specific user stories (format: @pytest.mark.story('US-XXX-NNN'))",
]
story_strict = true

[tool.agentic.story_coverage]
# Files excluded from --check-story-coverage enforcement.
# Infrastructure and utility files that don't map to a specific user story.
exclude = [
    "modules/AgenticCLI/src/agenticcli/context.py",
    "modules/AgenticCLI/src/agenticcli/decorators.py",
    "modules/AgenticCLI/src/agenticcli/entry.py",
    "modules/AgenticCLI/src/agenticcli/exceptions.py",
    "modules/AgenticCLI/src/agenticcli/logging.py",
    "modules/AgenticCLI/src/agenticcli/utils/context_file.py",
    "modules/AgenticCLI/src/agenticcli/utils/epic_lock.py",
    "modules/AgenticCLI/src/agenticcli/utils/event_bus.py",
    "modules/AgenticCLI/src/agenticcli/utils/naming.py",
    "modules/AgenticCLI/src/agenticcli/utils/retry.py",
    "modules/AgenticCLI/src/agenticcli/utils/session_cleanup.py",
    "modules/AgenticCLI/src/agenticcli/utils/session_id.py",
    "modules/AgenticCLI/src/agenticcli/utils/spawn_command.py",
    "modules/AgenticCLI/src/agenticcli/utils/tmux.py",
    "modules/AgenticCLI/src/agenticcli/utils/tokens.py",
    "modules/AgenticCLI/src/agenticcli/utils/transport.py",
    "modules/AgenticCLI/src/agenticcli/workflows/ticket_workflow.py",
    "modules/AgenticCLI/src/agenticcli/commands/package.py",
    "modules/AgenticCLI/src/agenticcli/commands/preferences.py",
    "modules/AgenticGuidance/src/agenticguidance/models/question.py",
    "modules/AgenticGuidance/src/agenticguidance/services/claude_session.py",
    "modules/AgenticGuidance/src/agenticguidance/services/dependency.py",
    "modules/AgenticGuidance/src/agenticguidance/services/preset.py",
    "modules/AgenticGuidance/src/agenticguidance/services/question.py",
    "modules/AgenticGuidance/src/agenticguidance/services/session.py",
    "modules/AgenticGuidance/src/agenticguidance/services/session_config.py",
    "modules/AgenticGuidance/src/agenticguidance/services/template.py",
    "modules/AgenticCLI/src/agenticcli/utils/planner_prompt.py",
    "modules/AgenticCLI/src/agenticcli/utils/sdk_runner.py",
    "modules/AgenticCLI/src/agenticcli/utils/session_diagnostics.py",
    "modules/AgenticCLI/src/agenticcli/utils/state_store.py",
    "modules/AgenticCLI/src/agenticcli/utils/subprocess_utils.py",
    "modules/AgenticCLI/src/agenticcli/utils/tmux_layout.py",
    "modules/AgenticCLI/src/agenticcli/workflows/template_workflow.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.uv.sources]
agenticguidance = { path = "../AgenticGuidance", editable = true }
