[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticfrontend"
version = "0.1.0"
description = "Web-based terminal UI for AgenticEngineering"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "AgenticEngineering" }
]
keywords = ["terminal", "web", "xterm", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tornado>=6.4",
    "terminado>=0.18",
]

[project.scripts]
agentic-terminal = "agenticfrontend.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agenticfrontend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
