[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticguidance"
version = "0.1.0"
description = "AgenticGuidance services layer - business logic for agentic workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgenticEngineering Team" }
]
keywords = ["agentic", "guidance", "workflow", "services"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "tinydb>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-testmon>=2.0",
    "pytest-xdist>=3.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agenticguidance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --testmon -n auto --dist loadgroup"
markers = [
    "integration: marks tests as integration tests (slower, require setup)",
    "story: marks tests that validate specific user stories (format: @pytest.mark.story('US-XXX-NNN'))",
]
story_strict = false
