[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticlangsmith"
version = "0.1.0"
description = "LangSmith API wrapper for AgenticCLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "AgenticEngineering" }
]
keywords = ["langsmith", "tracing", "observability", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agenticlangsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
