[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentictmux"
version = "0.1.0"
description = "Terminal session management for AgenticEngineering workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgenticEngineering Team" }
]
keywords = ["agentic", "tmux", "session", "terminal", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agenticguidance",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
agentic-tmux = "agentictmux.entry:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentictmux"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
