[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myagents"
version = "0.1.1"
description = ""
authors = []
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "agent-gcptoolkit",
    "agent-remote",
    "langgraph>=0.2.0",
    "langgraph-cli>=0.4.7",
    "langgraph-api>=0.5.2,<0.6.0",
    "langgraph-runtime-inmem>=0.16.0,<0.17.0",
    "langchain-core",
    "langchain-google-genai>=2.0.5",
    "langsmith>=0.1.0",
    "google-genai>=1.48.0",
    "grpcio>=1.76.0",
    "protobuf>=6.32.1,<7.0.0",
    "build",
]

[project.scripts]
myagents = "myagents.frontend.cli.entry:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["myagents*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml"]

[tool.ruff]
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I) rules
select = ["E", "W", "F", "I"]
# F401: unused imports (sometimes needed for re-exports)
# I001: isort ordering (can conflict with other tools)
ignore = ["F401", "I001"]

# Enable autofix for unsafe rules
fixable = ["ALL"]
unfixable = []

# Allow autofix for all rules
[tool.ruff.lint.isort]
known-first-party = ["myagents"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.0.0",
    "pytest-testmon>=2.1.0",
    "requests>=2.32.5",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

# Local path for agent-gcptoolkit - required for uv to resolve the dependency
# agent-gcptoolkit is on GCP Artifact Registry (private), not public PyPI
# For local development: uses sibling ../Agent-GCPtoolkit directory
# For Docker: Agent-GCPtoolkit is COPY'd as sibling in Dockerfile.test
[tool.uv.sources]
agent-gcptoolkit = { path = "../Agent-GCPtoolkit", editable = true }
agent-remote = { path = "../RemoteAgents", editable = true }
